# knowledge-onboarding-crew

./: .gitignore  BACKLOG.md  README.md  system-architecture.md
august_hackathon/: CLAUDE.md  README.md  pyproject.toml
august_hackathon/.claude/: settings.local.json
august_hackathon/src/august_hackathon/: crew.py  main.py  youtube_transcribe.py
august_hackathon/src/august_hackathon/config/: agents.yaml  tasks.yaml
meeting_subproject/onboarding_plan/: README.md  mkdocs.yml  pyproject.toml
meeting_subproject/onboarding_plan/docs/: index.md
meeting_subproject/onboarding_plan/docs/assets/js/: checklist.js
meeting_subproject/onboarding_plan/docs/modules/: module-01-claude-code-cli-reference.md  module-04-claude-code-technical-guide.md  module-05-claude-code-masterclass-insights.md  module-06-cloud-code-workshop-insights.md
meeting_subproject/onboarding_plan/docs/modules_enriched/: module-01-claude-code-cli-reference.md  module-05-claude-code-masterclass-insights.md
meeting_subproject/onboarding_plan/docs/reference/: Claude Code Technical Guide.md  claude-code-cli-reference-cheatsheet.md  claude-code-hooks-reference-cheatsheet.md  claude-code-slash-reference-cheatsheet.md  claude-code-technical-guide-cheatsheet.md
meeting_subproject/onboarding_plan/onboarding_plan/docs/: checklist.md  index.md
meeting_subproject/onboarding_plan/onboarding_plan/docs/modules/: module-01-foundational-concepts.md  module-02-github-integration.md  (+4 more)
meeting_subproject/onboarding_plan/src/onboarding_plan/: crew.py  main.py
meeting_subproject/onboarding_plan/src/outputs/: checklist.md  learning_plan.md  schedule.ics
meeting_subproject/web_research/: README.md  pyproject.toml
meeting_subproject/web_research/src/web_research/: crew.py  main.py
(+76 files in other folders)
