[project]
name = "web_research"
version = "0.1.0"
description = "web_research using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
web_research = "web_research.main:run"
run_crew = "web_research.main:run"
train = "web_research.main:train"
replay = "web_research.main:replay"
test = "web_research.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
